.provarCaches/00D410000011HE0EAM/objects/rstk__woiss__c.object
<CustomObject>
    <description>woiss__c; Helper object for WO Issue</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__isnewcode__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>isnewcode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__line_comment__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>line_comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__line_qty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>line_qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__line_rel__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>line_rel</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__line_soline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>line_soline</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue</relationshipLabel>
        <relationshipName>ZZ_WO_Issue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__line_status__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>line_status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_allocpol__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_alt_qty_dflt_opt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Comp Qty per Parent Qty Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_compitem2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Component</description>
        <label>Component</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue (Component)</relationshipLabel>
        <relationshipName>ZZ_WO_Issue3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_decqtyalloc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Allocated</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_decqtyavail__c</fullName>
        <description>Loc Qty</description>
        <label>Loc Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_decqtyiss__c</fullName>
        <description>Issued</description>
        <label>Issued</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_decqtyoutstdg__c</fullName>
        <description>Remaining</description>
        <label>Remaining</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_decqtyreq__c</fullName>
        <description>Required</description>
        <label>Required</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_displayoptions__c</fullName>
        <label>Display Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Display All Components</fullName>
                </value>
                <value>
                    <fullName>Display Non-Serial Components</fullName>
                </value>
                <value>
                    <fullName>Display Serial Components</fullName>
                </value>
                <value>
                    <fullName>Include Backflush</fullName>
                </value>
                <value>
                    <fullName>Auto-Select Serial Numbers</fullName>
                </value>
                <value>
                    <fullName>Display Document</fullName>
                </value>
                <value>
                    <fullName>Display Loc Comments</fullName>
                </value>
                <value>
                    <fullName>Display Dmd Comments</fullName>
                </value>
                <value>
                    <fullName>Allow Over-Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__poiss_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Division</description>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>divpoisss</relationshipLabel>
        <relationshipName>divpoisss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_dmd_comments__c</fullName>
        <description>Replace Dmd Comments</description>
        <label>Replace Dmd Comments</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_docno__c</fullName>
        <description>Document</description>
        <label>Document</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_errormessage__c</fullName>
        <label>poiss_errormessage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_iclocitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>(LocId / LocNum) (Qty) (LocSec)</label>
        <referenceTo>rstk__iclocitem__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue ((LocId / LocNum) (Qty) (LocSec))</relationshipLabel>
        <relationshipName>ZZ_WO_Issue2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_iclocitemname__c</fullName>
        <description>Loc Id / Loc Num</description>
        <label>Loc Id / Loc Num</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_iclotitemexpires__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_isserial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>poiss_isserial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_issue_all__c</fullName>
        <defaultValue>false</defaultValue>
        <label>poiss_issue_all</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_issue_decqty__c</fullName>
        <description>Issue Qty</description>
        <label>Issue Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_issueserials__c</fullName>
        <description>Serial Numbers</description>
        <label>Serial Numbers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_loc_comments__c</fullName>
        <description>Replace Loc Comments</description>
        <label>Replace Loc Comments</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_locid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Loc ID</description>
        <label>Loc ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue (Loc ID)</relationshipLabel>
        <relationshipName>ZZ_WO_Issue3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_locnum__c</fullName>
        <description>Loc Num</description>
        <label>Loc Num</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_lotno__c</fullName>
        <description>Lot No</description>
        <label>Lot No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_ordno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Purchase Order Header</description>
        <inlineHelpText>Purchase Order Number</inlineHelpText>
        <label>Purchase Order Header</label>
        <referenceTo>rstk__pohdr__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue</relationshipLabel>
        <relationshipName>ZZ_WO_Issue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_podmd__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Component Demand</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_poline__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Line</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_polinename__c</fullName>
        <label>Poline Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_proj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Master</description>
        <inlineHelpText>Project Master</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue (Project Master)</relationshipLabel>
        <relationshipName>ZZ_WO_Issue1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_qtyalloc__c</fullName>
        <description>Alloc Qty</description>
        <label>Alloc Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Selected</description>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_selectedserials__c</fullName>
        <description>Serials</description>
        <label>Serials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_selectedsrliclocitemids__c</fullName>
        <label>poiss_selectedsrliclocitemids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_seq_dmds_by_wctr__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sequence Demands by Purchase Center</description>
        <label>Sequence Demands by Purchase Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_serial_text__c</fullName>
        <label>Lot# / Serial#</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_serialcompicitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When issuing Serial Components, select component from dropdown, then enter Serial Numbers in box below.</inlineHelpText>
        <label>Serial Component</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue (Serial Component)</relationshipLabel>
        <relationshipName>ZZ_WO_Issue4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Master</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue (Site Master)</relationshipLabel>
        <relationshipName>ZZ_WO_Issue1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_txn_comments__c</fullName>
        <description>Txn Comments</description>
        <label>Txn Comments</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poiss_txndate__c</fullName>
        <description>Transaction Date</description>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poissr_decqtyiss__c</fullName>
        <description>Issued</description>
        <label>Issued</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poissr_decqtyreq__c</fullName>
        <description>Required</description>
        <label>Required</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poissr_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Division</description>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue (Division)</relationshipLabel>
        <relationshipName>ZZ_WO_Issue2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poissr_dmdcomment__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Dmd Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poissr_empl_name__c</fullName>
        <description>empl_name</description>
        <label>empl_name</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poissr_errormessage__c</fullName>
        <description>errormessage</description>
        <label>errormessage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poissr_hdrordno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Purchase Order</description>
        <inlineHelpText>Purchase Order</inlineHelpText>
        <label>Purchase Order</label>
        <referenceTo>rstk__pohdr__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue (Purchase Order)</relationshipLabel>
        <relationshipName>ZZ_WO_Issue1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poissr_iclocitemname__c</fullName>
        <description>Loc Id / Loc Num</description>
        <label>Loc Id / Loc Num</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poissr_issue_decqty__c</fullName>
        <description>Issue Qty</description>
        <label>Issue Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poissr_issueserials__c</fullName>
        <description>Serial Numbers</description>
        <label>Serial Numbers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__poissr_loccomment__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Loc Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poissr_ordno__c</fullName>
        <description>Order No</description>
        <label>Order No</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poissr_podmdcst__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>poissr_podmdcst</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poissr_qty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>poissr_qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poissr_rissue_qty__c</fullName>
        <description>Reverse Qty</description>
        <label>Reverse Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poissr_selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Selected</description>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poissr_selectedserials__c</fullName>
        <description>Serials</description>
        <label>Serials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poissr_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>site_ui</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue (site_ui)</relationshipLabel>
        <relationshipName>ZZ_WO_Issue2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poissr_srlpodmdcsts__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>poissr_srlpodmdcsts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poissr_txn_comments__c</fullName>
        <description>Txn Comments</description>
        <label>Txn Comments</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poissr_txncomment__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Txn Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_actqty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sodmd_actqty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_compitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue (sodmd_compitem)</relationshipLabel>
        <relationshipName>ZZ_WO_Issue1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sodmd_completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sodmd_div</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue (sodmd_div)</relationshipLabel>
        <relationshipName>ZZ_WO_Issue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_error__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_iclocitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sodmd_iclocitem</label>
        <referenceTo>rstk__iclocitem__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue (sodmd_iclocitem)</relationshipLabel>
        <relationshipName>ZZ_WO_Issue1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_iclotitemexpires__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sodmd_iclotitemexpires</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_iskit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sodmd_iskit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_islot__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sodmd_islot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_issrl__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sodmd_issrl</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_locid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Loc ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue (sodmd_locid)</relationshipLabel>
        <relationshipName>ZZ_WO_Issue2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_locnum__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Loc Num</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_locqty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Loc Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_lotno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Lot No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_needuser__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sodmd_needuser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_origtotqty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sodmd_origtotqty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_project__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sodmd_project</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_rel__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sodmd_rel</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_reqqty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty Required</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_selected__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_serials__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sodmd_serials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_shipdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sodmd_shipdiv</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue (sodmd_shipdiv)</relationshipLabel>
        <relationshipName>ZZ_WO_Issue1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_shipsite__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sodmd_shipsite</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_sohdr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sodmd_sohdr</label>
        <referenceTo>rstk__sohdr__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue</relationshipLabel>
        <relationshipName>ZZ_WO_Issue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_soline__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sodmd_soline</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_soorddmd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sodmd_soorddmd</label>
        <referenceTo>rstk__soorddmd__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue</relationshipLabel>
        <relationshipName>ZZ_WO_Issue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_thisqty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sodmd_thisqty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_totqty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sodmd_totqty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sodmd_wbs__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sodmd_wbs</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_addinvoicebatch__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Add the new invoice to a batch (or create a new invoice batch if none available)</inlineHelpText>
        <label>Add Invoice to Current Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_allocate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allocate inventory</inlineHelpText>
        <label>Allocate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_cancelinvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Cancel Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_createinvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Perform the allocation, pick, pack, ship and invoice operations</inlineHelpText>
        <label>(Allocate,) Pick, Pack, Ship and Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_deallocate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>De-Allocate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_doalloc__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>soiss_doalloc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_doinv__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>soiss_doinv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_dopack__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>soiss_dopack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_dopick__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>soiss_dopick</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_doralloc__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>soiss_doralloc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_dorinv__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>soiss_dorinv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_dorpack__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>soiss_dorpack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_dorpick__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>soiss_dorpick</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_dorship__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>soiss_dorship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_doship__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>soiss_doship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_errormessage__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>soiss_errormessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_errorstack__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>soiss_errorstack</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_iclotitemexpires__c</fullName>
        <label>Lot Issue Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_ovrshipdate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <inlineHelpText>Override the shipment date for Sale Order Fulfillment</inlineHelpText>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_package__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Package inventory</inlineHelpText>
        <label>Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_pick__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Pick inventory</inlineHelpText>
        <label>Pick (Issue Material)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_pickdate__c</fullName>
        <description>Override pick date for Sale Order Fulfillment</description>
        <inlineHelpText>Override pick date for Sale Order Fulfillment</inlineHelpText>
        <label>Pick Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_reverseissue__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Reverse Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_reverseship__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Reverse Ship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_rinvdone__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>soiss_rinvdone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_rpackdone__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>soiss_rpackdone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_rshipdone__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>soiss_rshipdone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_rvalloc__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Reverse allocated inventory</inlineHelpText>
        <label>Reverse Allocate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_rvinv__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Cancel Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_rvpack__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Reverse packaged inventory</inlineHelpText>
        <label>Reverse Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_rvpick__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Reverse picked inventory</inlineHelpText>
        <label>Reverse Issue</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>